Fix tab content disappearing during scrolling on Firefox

--- a/ui/app/components/ui/tabs/index.scss
+++ b/ui/app/components/ui/tabs/index.scss
@@ -1,6 +1,9 @@
 @import 'tab/index';
 
 .tabs {
+  // Just for Firefox — https://github.com/MetaMask/metamask-extension/issues/8700
+  -moz-transform: translateZ(0);
+
   &__list {
     display: flex;
     justify-content: flex-start;
